<resources>
    <string name="app_name">AutoTestApp</string>
    <string name="title_boot_and_shutdown">开关机测试</string>
    <string name="title_sim">SIM卡测试</string>
    <string name="title_net">入网测试</string>
    <string name="title_call">语音通话测试</string>
    <string name="title_sms">短信收发测试</string>
    <string name="title_air_mode">飞行模式切换测试</string>
    <string name="title_pps">PS业务测试</string>
    <string name="title_module_reboot">模块重启测试</string>
    <string name="title_combination_test">组合测试</string>
    <string name="title_login_ftp">FTP登录</string>
    <string name="btn_start_test">开始测试</string>
    <string name="btn_stop_test">停止测试</string>
    <string name="text_in_testing">正在测试中</string>
    <string name="text_phone_null">测试手机号为空, 或者测试手机号不合法</string>
    <string name="text_result">测试结果:</string>
    <string name="text_test_times">测试次数:</string>
    <string name="text_total_runTimes">执行次数:</string>
    <string name="text_succeed_times">成功次数:</string>
    <string name="text_failed_times">失败次数：</string>
    <string name="text_succeed_rate">测试成功率:</string>
    <string name="text_log_dir">Log路径(测试结果路径):</string>
    <string name="text_sim_state">SIM卡状态:</string>
    <string name="text_unknown">未知</string>
    <string name="text_sim_state_unknown">Sim未知状态次数：</string>
    <string name="text_sim_state_absent">无Sim卡次数：</string>
    <string name="text_sim_state_ready">Sim卡良好次数：</string>
    <string name="text_sim_state_netWork_locked">Sim卡需要NetWorkPIN锁次数：</string>
    <string name="text_sim_state_pin_required">Sim卡需要PIN解锁次数：</string>
    <string name="text_sim_state_puk_required">Sim卡需要PUK解锁次数：</string>
    <string name="text_air_mode_state">飞行模式状态:</string>
    <string name="text_air_mode_open_time">飞行模式开启次数:</string>
    <string name="text_air_mode_close_time">飞行模式关闭次数:</string>
    <string name="text_switch_air_mode_success_time">切换成功次数:</string>
    <string name="text_switch_air_mode_failed_time">切换失败次数:</string>
    <string name="text_air_mode_open_success_time">开启成功次数:</string>
    <string name="text_air_mode_open_failed_time">开启失败次数:</string>
    <string name="text_air_mode_open_success_rate">开启成功率:</string>
    <string name="text_air_mode_close_success_time">关闭成功次数:</string>
    <string name="text_air_mode_close_failed_time">关闭失败次数:</string>
    <string name="text_air_mode_close_success_rate">关闭成功率:</string>
    <string name="text_network_state">当前入网状态:</string>
    <string name="text_module_state">当前模块状态:</string>
    <string name="text_service_state">入网状态:</string>
    <string name="text_in_service_time">正常次数:</string>
    <string name="text_out_of_service_time">未入网次数:</string>
    <string name="text_power_off_time">射频已关闭次数:</string>
    <string name="text_test_module">测试模式</string>
    <string name="text_emergency_time">仅限紧急呼叫次数:</string>
    <string name="text_in_service">已入网</string>
    <string name="text_out_of_service">未入网</string>
    <string name="text_power_off">射频已关闭</string>
    <string name="text_emergency_only">仅限紧急呼叫</string>
    <string name="text_reboot_success_time">开机正常次数:</string>
    <string name="text_reboot_failed_time">开机异常次数:</string>
    <string name="text_ps_state">PS激活状态:</string>
    <string name="text_net_connecting">激活中</string>
    <string name="text_net_connected">已激活</string>
    <string name="text_net_disconnect">未激活</string>
    <string name="text_net_suspend">网络迟缓</string>
    <string name="text_switch_succeed_time">切换成功次数:</string>
    <string name="text_switch_failed_time">切换失败次数:</string>
    <string name="text_up_power">已上电</string>
    <string name="text_down_power">已下电</string>
    <string name="text_test_title">测试标题</string>
    <string name="text_network_test_module">测试模式:</string>
    <string name="text_test_not_null">测试次数不能为空</string>
    <string name="text_test_time_is_zero">测试次数为0，不开始测试</string>
    <string name="text_wait_time_not_null">等待时间不能为空</string>
    <string name="text_wait_time_must_large_zero">等待拨通时间请输入大于0的数</string>
    <string name="text_send_content_not_null">发送内容不能为空</string>
    <string name="text_duration_time_not_null">通话时间不能为空</string>
    <string name="text_params_error">参数错误</string>
    <string name="text_long_sms">短信内容已是长短信</string>
    <string name="text_short_sms">短信内容是短短信</string>
    <string name="text_open_ps">激活PS次数:</string>
    <string name="text_close_ps">关闭PS次数:</string>
    <string name="text_open_ps_success_times">激活PS成功次数:</string>
    <string name="text_open_ps_failed_time">激活PS失败次数:</string>
    <string name="text_close_ps_success_time">关闭PS成功次数:</string>
    <string name="text_close_ps_failed_time">关闭PS失败次数:</string>
    <string name="text_reboot_radio_success">重启Radio成功，开始入网测试</string>
    <string name="text_reboot_radio_failed">重启Radio失败，此次测试失败，开始下一次测试</string>
    <string name="text_module_up_power_times">模块上电次数:</string>
    <string name="text_module_down_power_times">模块下电次数:</string>
    <string name="text_up_power_success_times">上电成功次数:</string>
    <string name="text_up_power_failed_times">上电失败次数:</string>
    <string name="text_down_power_success_times">下电成功次数:</string>
    <string name="text_down_power_failed_times">下电失败次数:</string>
    <string name="air_mode_open">已开启</string>
    <string name="air_mode_close">已关闭</string>
    <string name="text_reboot_device">重启终端</string>
    <string name="text_reboot_radio">开关Radio</string>
    <string name="text_checkbox_reboot">整机重启</string>
    <string name="text_checkbox_sim">sim检测</string>
    <string name="text_checkbox_network">入网测试</string>
    <string name="text_checkbox_call">通话测试</string>
    <string name="text_checkbox_air_mode">飞行模式</string>
    <string name="text_checkbox_sms">短信测试</string>
    <string name="text_checkbox_ps">PS测试</string>
    <string name="text_checkbox_module_reboot">模块重启</string>
    <string name="text_reboot_test_result">=======重启测试结果=======</string>
    <string name="text_sim_test_result">=======sim卡测试结果=======</string>
    <string name="text_network_test_result">=======入网测试结果=======</string>
    <string name="text_call_test_result">=======通话测试结果=======</string>
    <string name="text_sms_test_result">=======短信测试结果=======</string>
    <string name="text_air_mode_test_result">=======飞行模式测试结果=======</string>
    <string name="text_ps_test_result">=======PS测试结果=======</string>
    <string name="text_module_reboot_test_result">=======模块重启测试结果=======</string>
    <string name="text_ftp_ip">ip地址:</string>
    <string name="text_ftp_port">端口号:</string>
    <string name="text_ftp_user">用户名:</string>
    <string name="text_ftp_password">密码:</string>
    <string name="text_ip_not_null">ip不能为空</string>
    <string name="text_port_not_null">port不能为空</string>
    <string name="text_username_not_null">username不能为空</string>
    <string name="text_password_not_null">password不能为空</string>
    <string name="text_connect_ftp_success">连接FTP服务器成功</string>
    <string name="text_connect_ftp_failed">连接FTP服务器失败</string>
    <string name="text_connect_ftp_timeout">连接FTP服务器超时，连接失败</string>
    <string name="text_ip_address_format_error">Ip格式错误</string>
    <string name="text_combination_is_all_uncheck">请勾选组合测试项在点击开始测试</string>
    <string name="text_logining">登录中</string>
    <string name="text_wifi_disconnected">wifi未连接,测试结果不上传FTP服务器</string>
    <string name="text_connect_ftp_server_failed">连接ftp服务器失败，测试结果不上传。如果想上传请先去FTP登录界面登录</string>
    <string name="text_call_coming">有来电</string>
    <string name="text_call_been_hook_off">来电被接听</string>
    <string name="text_min_wait_result_time">等待发送结果需要一定时间，太短必定接收超时，请输入大于或等于15秒</string>
    <string name="param_phone">手机号</string>
    <string name="param_test_times">测试次数</string>
    <string name="param_duration_time">通话时长</string>
    <string name="param_wait_time">等待拨通时间</string>
    <string name="param_wait_sms_result_time">等待短信发送结果时间</string>
    <string name="param_sms_str">短信内容</string>
    <string name="param_up_power">1</string>
    <string name="param_down_power">0</string>
    <string name="key_result">result</string>
    <string name="key_phone">phone</string>
    <string name="key_call_phone">call_phone</string>
    <string name="key_sms_phone">sms_phone</string>
    <string name="key_test_times">times</string>
    <string name="key_wait_time">wait_time</string>
    <string name="key_duration_time">duration_time</string>
    <string name="key_btn_start">btn_start</string>
    <string name="key_reboot_test_time">reboot_test_time</string>
    <string name="key_sim_state">sim_state</string>
    <string name="key_sim_test_time">sim_test_time</string>
    <string name="key_test_result_path">test_result_path</string>
    <string name="key_sim_unknown_times">sim_unknown_times</string>
    <string name="key_sim_absent_times">sim_absent_times</string>
    <string name="key_sim_ready_times">sim_ready_times</string>
    <string name="key_sim_pin_times">sim_pin_times</string>
    <string name="key_sim_puk_times">sim_puk_times</string>
    <string name="key_sim_netWork_times">sim_network_times</string>
    <string name="key_sim_run_times">sim_run_times</string>
    <string name="key_air_mode_test_time">air_mode_test_time</string>
    <string name="key_network_test_time">network_test_time</string>
    <string name="key_network_test_module">network_test_module</string>
    <string name="key_network_is_testing">net_work_is_testing</string>
    <string name="key_network_in_service_time">in_service_time</string>
    <string name="key_network_out_service_time">out_service_time</string>
    <string name="key_network_power_off_time">power_off_time</string>
    <string name="key_network_emergency_time">emergency_time</string>
    <string name="key_network_total_run_time">total_run_time</string>
    <string name="key_network_run_next_time">run_next_time</string>
    <string name="key_reboot_success_time">reboot_success</string>
    <string name="key_reboot_failed_time">reboot_failed</string>
    <string name="key_reboot_run_time">reboot_run_time</string>
    <string name="key_is_reboot_testing">is_reboot_testing</string>
    <string name="key_is_reboot">is_reboot</string>
    <string name="key_is_sim_testing">is_sim_testing</string>
    <string name="key_wait_sms_result_time">wait_sms_result_time</string>
    <string name="key_sms_string">sms_string</string>
    <string name="key_ps_test_time">ps_test_time</string>
    <string name="key_icon">icon</string>
    <string name="key_name">name</string>
    <string name="key_module_test_time">module_test_time</string>
    <string name="key_sms_type">sms_type</string>
    <string name="key_is_start_test">is_start_test</string>
    <string name="key_is_testing">is_testing</string>
    <string name="key_reboot_is_checked">reboot_is_checked</string>
    <string name="key_sim_is_checked">sim_is_checked</string>
    <string name="key_network_is_checked">network_is_checked</string>
    <string name="key_call_is_checked">call_is_checked</string>
    <string name="key_air_mode_is_checked">air_mode_is_checked</string>
    <string name="key_sms_is_checked">sms_is_checked</string>
    <string name="key_ps_is_checked">ps_is_checked</string>
    <string name="key_module_reboot_is_checked">module_reboot_is_checked</string>
    <string name="key_total_run_time">total_run_times</string>
    <string name="key_ps_success_time">ps_success_time</string>
    <string name="key_sim_success_time">sim_success_time</string>
    <string name="key_network_success_time">network_success_time</string>
    <string name="key_call_success_time">call_success_time</string>
    <string name="key_air_mode_success_time">air_mode_success_time</string>
    <string name="key_sms_success_time">sms_success_time</string>
    <string name="key_module_reboot_success_time">module_reboot_success_time</string>
    <string name="key_sim_failed_time">sim_failed_time</string>
    <string name="key_network_failed_time">network_failed_time</string>
    <string name="key_call_failed_time">call_failed_time</string>
    <string name="reboot_default_value">1</string>
</resources>