<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.jiaze.airmode.AirModeTestActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/title_air_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:text="@string/text_air_mode_state"/>

            <TextView
                android:id="@+id/air_mode_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:text="@string/text_unknown"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:text="@string/text_test_times"/>

            <EditText
                android:id="@+id/air_mode_test_time"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/reboot_default_value"/>
        </LinearLayout>


        <Button
            android:id="@+id/air_start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_test"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/air_test_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

</ScrollView>

